# ToDo

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  req.txt
core/: celery.py  settings.py  urls.py
task/: models.py  schemas.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py
user/: managers.py  models.py  schemas.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
utils/: chack_auth.py  middlewares.py  redis.py
